--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ version = "0.1.0"
 description = "A CLI tool for git cleanup"
 dependencies = [
     "typer",
-    "gitpython"
+    "gitpython",
+    "rich"
 ]
 
 [project.scripts]
